@@ -5,7 +5,7 @@ FeatherNotes is a lightweight Qt5 hierarchical notes-manager for Linux. It is in
 * Support for rich text formatting, image embedding and inserting editable tables;
 * Drag-and-drop capability for moving nodes and also for embedding images;
 * A tray icon for quick access on any desktop;
-* Correct position/size/state saving and restoring with (almost) all window managers;
+* Correct position/size saving and restoring with most window managers;
 * Compact but complete search and replacement widgets;
 * The ability to include searchable tags (hidden info on each node);
 * Support for local and remote hyperlinks (bookmarks);
