@@ -209,7 +209,33 @@ void TextEdit::wheelEvent (QWheelEvent *e)
     if (scrollJumpWorkaround && e->angleDelta().manhattanLength() > 240)
         e->ignore();
     else
-        QTextEdit::wheelEvent(e);
+    {
+        if (e->modifiers() & Qt::ControlModifier)
+        {
+            float delta = e->angleDelta().y() / 120.f;
+            zooming (delta);
+            return;
+        }
+        /* as in QTextEdit::wheelEvent() */
+        QAbstractScrollArea::wheelEvent (e);
+        updateMicroFocus();
+    }
+}
+/*************************/
+void TextEdit::zooming (float range)
+{
+    if (range == 0.f) return;
+    QFont f = document()->defaultFont();
+    const float newSize = f.pointSizeF() + range;
+    if (newSize <= 0) return;
+    f.setPointSizeF (newSize);
+    setFont (f);
+    QFontMetrics metrics (f);
+    setTabStopWidth (4 * metrics.width (' '));
+
+    /* if this is a zoom-out, the text will need
+       to be formatted and/or highlighted again */
+    if (range < 0) emit zoomedOut (this);
 }
 
 }
