@@ -7,6 +7,7 @@ V0.4.4
  * Put the real image scale in the scale dialog!
  * Implemented auto-scrolling to selected file in file dialogs.
  * Added the ability to save selected images.
+ * Added support for text zooming with Ctrl+wheel.
 
 V0.4.3
 ---------
